fixing spacing on tablet

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -369,7 +369,7 @@ form button:hover {
     }
 
     .icon-container {
-        width: 45%;
+        width: 40%;
         margin: 10px 0;
         text-align: center;
         display: flex;
